# autodiscovery

./: .env.example  .gitignore  AGENTS.md  HANDBOOK.md  PLAN.md  README.md  agents.md  pyproject.toml
clinical_trial_example/: metadata.json  trial_data.csv
src/: __init__.py  agents.py  args.py  config.py  deduplication.py  run.py  utils.py
