[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodiscovery"
version = "0.1.0"
description = "Open-ended scientific discovery via Bayesian surprise (NeurIPS 2025)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dhruv Agarwal" },
  { name = "Bodhisattwa Prasad Majumder" },
]
dependencies = [
  "streamlit==1.37.1",
  "pandas",
  # matplotlib 3.10+ requires Python >=3.10; a range avoids hard failure on 3.10+ pip when 3.10 wheels differ by platform.
  "matplotlib>=3.7,<4",
  # 8.19+ requires Python >=3.10; keep a range so older Pythons can still resolve deps if needed.
  "IPython>=8.12,<9",
  "pyautogen[openai]==0.8",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "h5py",
  "boto3",
]

[project.scripts]
autodiscovery = "src.run:main"

[project.urls]
Homepage = "https://openreview.net/forum?id=kJqTkj2HhF"
Paper = "https://openreview.net/pdf?id=kJqTkj2HhF"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.html"]
