[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodiscovery"
version = "0.1.5"
description = "Open-ended scientific discovery via Bayesian surprise (NeurIPS 2025)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Dhruv Agarwal" },
  { name = "Bodhisattwa Prasad Majumder" },
]
dependencies = [
  "streamlit==1.37.1",
  "pandas>=2.2",
  "matplotlib>=3.7,<4",
  "IPython>=8.12,<9",
  "pyautogen[openai]==0.8",
  "scikit-learn>=1.5",
  "scipy>=1.14",
  "statsmodels>=0.14",
  "h5py>=3.12",
  "boto3>=1.36",
  "python-dotenv>=1.0",
  "tqdm>=4",
]

[project.scripts]
autodiscovery = "src.run:main"

[project.urls]
Homepage = "https://openreview.net/forum?id=kJqTkj2HhF"
Paper = "https://openreview.net/pdf?id=kJqTkj2HhF"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
